--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,21 @@ Javascript library used: D3.js by Bostock (2022): https://github.com/d3/d3
 Code adapted from Adam Janes (2020): https://github.com/adamjanes/udemy-d3/tree/master/05
 Assistance taken from ChatGPT to refine and debug code*/
 
+@font-face {
+  font-family: 'VTC Du Bois Trial';
+  src: url('/VTCDuBoisTrial-Regular.woff2') format('woff2'),
+       url('/VTCDuBoisTrial-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
 
+@font-face {
+  font-family: 'VTC Du Bois Trial';
+  src: url('/VTCDuBoisTrial-Bold.woff2') format('woff2'),
+       url('/VTCDuBoisTrial-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
 
 #chart-area {
 	margin-left: auto;
@@ -24,12 +38,17 @@ Assistance taken from ChatGPT to refine and debug code*/
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
+  font-family: Public Sans;
 }
 
 body,
 html {
 overflow-x: hidden;
+background: #FFE8DA;
+}
+
+body {
+  color: #654321;
 }
 
 .circle {
@@ -65,10 +84,6 @@ overflow-x: hidden;
   }
 }
 
-
-
-
-
 .grid {
   stroke: #ddd;
   stroke-width: 1px;
@@ -87,6 +102,68 @@ overflow-x: hidden;
   shape-rendering: crispEdges;
 }
 
+.title {
+  align-self: stretch;
+  color: #654321;
+  text-align: center;
+  font-family: VTC Du Bois Trial;
+  font-size: 3.75rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
 
+.subtitle {
+  height: 3.9375rem;
+  flex: 1 0 0;
+  color: #654321;
+  text-align: center;
+  font-family: Public Sans;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 1.29375rem */
+}
 
+.container {
+  display: flex;
+  justify-content: center;
+}
 
+.header {
+  display: flex;
+  flex-direction: column;
+}
+
+text {
+  fill: #654321;
+}
+
+.xLabel, .yLabel {
+  font-weight: 700;
+  font-family: VTC Du Bois Trial;
+}
+
+.timeLabel {
+  font-family: VTC Du Bois Trial;
+  font-weight: 700;
+}
+
+line {
+  fill: #654321;
+  opacity: 0.35;
+}
+
+.domain {
+  stroke: #654321;
+  stroke-width: 2px;
+}
+
+.xTickText, .yTickText {
+  fill: rgb(224, 64, 64);
+}
+
+.legend {
+  display: flex;
+  flex-direction: row;
+}
