--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,34 +53,34 @@ body {
 
 .circle {
   fill: radial-gradient(white, lightblue);
-  filter: drop-shadow(-15px -15px 15px rgb(54, 52, 52));
+  filter: drop-shadow(-15px -15px 15px rgb(101, 67, 33));
   transform: rotateX(15deg);
   transform: rotateY(15deg);
   transition: transform 0.4s ease-in-out;
   background: linear-gradient(to top, #fff, #ffcccc);
-  box-shadow: 5px 5px 5px 20px rgb(54, 52, 52);
+  box-shadow: 5px 5px 5px 20px rgb(101, 67, 33);
   border-radius: 100%;
   animation: trail 6.3s ease-in-out infinite;
 }
 
 @keyframes trail {
   0% {
-    filter: drop-shadow(0px 30px 15px rgb(54, 52, 52));
+    filter: drop-shadow(0px 30px 15px rgb(101, 67, 33));
   }
   20% {
-    filter: drop-shadow(0px 30px 15px rgb(54, 52, 52)) drop-shadow(-45px 35px 20px rgb(54, 52, 52));
+    filter: drop-shadow(0px 30px 15px rgb(101, 67, 33)) drop-shadow(-45px 35px 20px rgb(101, 67, 33));
   }
   40% {
-    filter: drop-shadow(0px 30px 20px rgb(54, 52, 52)) drop-shadow(-45px 45px 25px rgb(54, 52, 52));
+    filter: drop-shadow(0px 30px 20px rgb(101, 67, 33)) drop-shadow(-45px 45px 25px rgb(101, 67, 33));
   }
   60% {
-    filter: drop-shadow(-45px 45px 25px rgb(54, 52, 52)) drop-shadow(-45px 55px 30px rgb(54, 52, 52));
+    filter: drop-shadow(-45px 45px 25px rgb(101, 67, 33)) drop-shadow(-45px 55px 30px rgb(101, 67, 33));
   }
   80% {
-    filter: drop-shadow(-45px 55px 30px rgb(54, 52, 52)) drop-shadow(-45px 65px 35px rgb(54, 52, 52));
+    filter: drop-shadow(-45px 55px 30px rgb(101, 67, 33)) drop-shadow(-45px 65px 35px rgb(101, 67, 33));
   }
   100% {
-    filter: drop-shadow(-45px 65px 35px rgb(54, 52, 52)) drop-shadow(-45px 70px 40px rgb(54, 52, 52));
+    filter: drop-shadow(-45px 65px 35px rgb(101, 67, 33)) drop-shadow(-45px 70px 40px rgb(101, 67, 33));
   }
 }
 
@@ -160,7 +160,8 @@ line {
 }
 
 .xTickText, .yTickText {
-  fill: rgb(224, 64, 64);
+  fill: #B21112;
+  stroke: #B21112;
 }
 
 .legend {
