--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,17 +4,17 @@ Code adapted from Adam Janes (2020): https://github.com/adamjanes/udemy-d3/tree/
 Assistance taken from ChatGPT to refine and debug code*/
 
 @font-face {
-  font-family: 'VTC Du Bois Trial';
-  src: url('/VTCDuBoisTrial-Regular.woff2') format('woff2'),
-       url('/VTCDuBoisTrial-Regular.woff') format('woff');
+  font-family: 'VTC Du Bois';
+  src: url('/fonts/VTCDuBois-Regular.woff2') format('woff2'),
+       url('/fonts/VTCDuBois-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'VTC Du Bois Trial';
-  src: url('/VTCDuBoisTrial-Bold.woff2') format('woff2'),
-       url('/VTCDuBoisTrial-Bold.woff') format('woff');
+  font-family: 'VTC Du Bois';
+  src: url('/VTCDuBois-Bold.woff2') format('woff2'),
+       url('/VTCDuBois-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
@@ -106,7 +106,7 @@ body {
   align-self: stretch;
   color: #654321;
   text-align: center;
-  font-family: VTC Du Bois Trial;
+  font-family: VTC Du Bois;
   font-size: 3.75rem;
   font-style: normal;
   font-weight: 700;
@@ -141,11 +141,11 @@ text {
 
 .xLabel, .yLabel {
   font-weight: 700;
-  font-family: VTC Du Bois Trial;
+  font-family: VTC Du Bois;
 }
 
 .timeLabel {
-  font-family: VTC Du Bois Trial;
+  font-family: VTC Du Bois;
   font-weight: 700;
 }
 
@@ -170,6 +170,6 @@ line {
 }
 
 .legendText {
-  font-family: VTC Du Bois Trial;
+  font-family: VTC Du Bois;
   font-weight: 700;
 }
